# yadl

./: .gitignore  .travis.yml  .travis_cmockery2.sh  Makefile  Makefile.am  Makefile.in  README.md  Yadl Report.odt  block.c  configure.ac  dedup.c  dedup.h  delete.c  delete.h  hash.c  leveldb.c  main.c  md5.h  yadl.pc.in
autom4te.cache/: output.0  requests  traces.0
design/: yadl.c  yadl.h
inline_dedup/: Makefile  client.c  ydl_namespace.c  ydl_namespace.h
inline_dedup_leveldb/: Makefile  client.c  ydl_clean_buff.c  ydl_namespace.c  ydl_namespace.h
minhash_poc/: Makefile  ldb.c  ldb.h  main.c  main.h  md5.c  object_store.c  parsing.h  sha1.c  sha1.h  stub.c  stub.h
parsing/: parsing.c  parsing.h
rabin_karp/: Makefile  Makefile.am  Rabin.sh  Rabin_Karp.c  Rabin_Karp.h  test_data.txt
src/: Makefile  Makefile.am  Makefile.in  Rabin_Karp.c  Rabin_Karp.h  Restore_file.c  block.c  block.h  catalog.c  catalog.h  clean_buff.c  clean_buff.cpp  clean_buff.h  dedup.c  dedup.h  dedup_test  dedup_test.c  delete.c  delete.h  delete_test  delete_test.c  hash.c  hash.h  insert_block_file.c  insert_block_file.h  ldb.c  ldb.h  main.c  main.h  md5.c  md5.cpp  md5.h  min_hash.c  min_hash.h  minhash_restore.c  minhash_restore.h  minhash_stub.c  minhash_stub.h  namespace.c  namespace.h  (+34 more)
test_program/: Dedup_new.txt  Makefile  Restore_file.c  block.c  block.h  block_Makefile  block_test.c  blockstore.txt  cat_Makefile  catalog.c  catalog.h  catalog_test.c  clean_buff.c  clean_buff.h  dedup  dedup.c  dedup.h  dedup_Makefile  dedup_mock.c  dedup_test.c  dedup_test.h  delete.c  delete.h  delete_Makefile  delete_test.c  filecatalog.txt  filehashDedup.txt  hash.c  hash.h  hash_Makefile  hash_test.c  main.c  main.h  md5.c  md5.h  restore.c  restore.h  sha1.c  sha1.h  stub.c  (+3 more)
tests/basic/: compare_files.sh
util/: Makefile.am
util/log/: Makefile.am
util/log/src/: Makefile  Makefile.am  log_yadl.c  log_yadl.h
